# rtn-sar

./: .gitignore  LICENSE  swa-cli.config.json
.github/workflows/: azure-static-web-apps-ambitious-glacier-0b7976f10.yml
api/: pyproject.toml
mobileapp/: README.md  pubspec.yaml
mobileapp/android/app/: build.gradle
mobileapp/android/app/src/main/: AndroidManifest.xml
mobileapp/android/app/src/main/kotlin/com/example/rtn_sar/: MainActivity.kt
mobileapp/test/: widget_test.dart
webapp/: package-lock.json  package.json
webapp/src/: App.tsx
